tests/e2e/tests/simple/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-echosrv
spec:
  name: echosrv
  subsets:
    - name: subset-v1
      labels:
        version: v1
    - name: subset-v2
      labels:
        version: v2
