tests/e2e/tests/simple/routingrule1.yaml
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  name: rule-1
spec:
  destination:
    name: echosrv
  precedence: 1
  route:
  - labels:
      version: test1
    weight: 50
  - labels:
      version: test2
    weight: 50
