tests/e2e/tests/simple/servicesToBeInjected.yaml
apiVersion: v1
kind: Service
metadata:
  name: echosrv
spec:
  ports:
  - port: 8080
    name: http-echo
  - port: 8079
    name: grpc-ping
  selector:
    app: echosrv
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-ingress
spec:
  rules:
    - http:
        paths:
          - path: /.*
            backend:
              serviceName: echosrv
              servicePort: http-echo
---
# 2 deployments so we can change routing rules
# 1st deployment, 1 pod for service inside the cluster, will get istio injected
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echosrv-deployment-1
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # a unique name is generated from the deployment name
      labels:
        app: echosrv
        version: v1
        test: a
    spec:
      containers:
      - name: echosrv
        image: {{.FortioImage}}
        ports:
         - containerPort: 8080
         - containerPort: 8079
        args:
          - server
#          - -loglevel=debug  # to see all incoming connections
#          - -echo-debug-path=/fortio/debug # can be changed
---
# 2nd deployment, 1 pod for service inside the cluster, will get istio injected
# same as above (copy pasta ftw) except for the version
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echosrv-deployment-2
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # a unique name is generated from the deployment name
      labels:
        app: echosrv
        version: v2
        test: b
    spec:
      containers:
      - name: echosrv
        image: {{.FortioImage}}
        ports:
         - containerPort: 8080
         - containerPort: 8079
        args:
          - server
#          - -loglevel=debug  # to see all incoming connections
#          - -echo-debug-path=/fortio/debug # can be changed
